// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css module: mappings 1`] = `";AAaA;EACE,UAAU;AACZ"`;

exports[`css module: sourcesContent 1`] = `
Array [
  "<template>
  <p class=\\"css\\">&lt;css&gt;</p>
  <p :class=\\"$style['css-module']\\">&lt;css&gt; module</p>
  <p class=\\"css-scoped\\">&lt;css&gt; scoped</p>
</template>

<style>
.css {
  color: red;
}
</style>

<style module>
.css-module {
  color: red;
}
</style>

<style scoped>
.css-scoped {
  color: red;
}
</style>
",
]
`;

exports[`css scoped: mappings 1`] = `";AAmBA;EACE,UAAU;AACZ"`;

exports[`css scoped: sourcesContent 1`] = `
Array [
  "<template>
  <p class=\\"css\\">&lt;css&gt;</p>
  <p :class=\\"$style['css-module']\\">&lt;css&gt; module</p>
  <p class=\\"css-scoped\\">&lt;css&gt; scoped</p>
</template>

<style>
.css {
  color: red;
}
</style>

<style module>
.css-module {
  color: red;
}
</style>

<style scoped>
.css-scoped {
  color: red;
}
</style>
",
]
`;

exports[`css: mappings 1`] = `";AAOA;EACE,UAAU;AACZ"`;

exports[`css: sourcesContent 1`] = `
Array [
  "<template>
  <p class=\\"css\\">&lt;css&gt;</p>
  <p :class=\\"$style['css-module']\\">&lt;css&gt; module</p>
  <p class=\\"css-scoped\\">&lt;css&gt; scoped</p>
</template>

<style>
.css {
  color: red;
}
</style>

<style module>
.css-module {
  color: red;
}
</style>

<style scoped>
.css-scoped {
  color: red;
}
</style>
",
]
`;

exports[`less with additionalData: mappings 1`] = `"AAKA;EACE"`;

exports[`less with additionalData: sourcesContent 1`] = `
Array [
  "<template>
  <p class=\\"less\\">&lt;less&gt; with additionalData</p>
</template>

<style lang=\\"less\\">
.less {
  color: @color;
}
</style>
",
]
`;

exports[`sass with import: mappings 1`] = `"AAAA;EACE;;ACOF;EACE"`;

exports[`sass with import: sourcesContent 1`] = `
Array [
  ".sass-with-import-imported
  color: red
",
  "<template>
  <p class=\\"sass-with-import\\">&lt;sass&gt; with import</p>
  <p class=\\"sass-with-import-imported\\">&lt;sass&gt; with import (imported)</p>
</template>

<style lang=\\"sass\\">
@import './sassWithImportImported'

.sass-with-import
  color: red
</style>
",
]
`;

exports[`sass: mappings 1`] = `"AAKA;EACE"`;

exports[`sass: sourcesContent 1`] = `
Array [
  "<template>
  <p class=\\"sass\\">&lt;sass&gt;</p>
</template>

<style lang=\\"sass\\">
.sass
  color: red
</style>
",
]
`;

exports[`src imported sass: mappings 1`] = `"AAAA;EACE;;ACCF;EACE"`;

exports[`src imported sass: sourcesContent 1`] = `
Array [
  ".src-import-sass-imported
  color: red
",
  "@import './src-import-imported'

.src-import-sass
  color: red
",
]
`;

exports[`src imported: mappings 1`] = `"AAAA;EACE,UAAU;AACZ"`;

exports[`src imported: sourcesContent 1`] = `
Array [
  ".src-import {
  color: red;
}
",
]
`;
